--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "discord-mesaga-fonto"
+name = "discord-message-source"
 version = "1.0.0"
 
 authors = ["Itsusinn <itsusinn@foxmail.com>"]
