--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2018"
 
 [dependencies]
 #bot
-serenity = "0.10"
+serenity = "0.10.9"
 
 # logging
 env_logger = "0.9.0"
 pretty_env_logger = "0.4.0"
-log = "0.4.8"
+log = "0.4.14"
 
 # asynchronous
 tokio = { version = "1.3", features = ["macros", "rt-multi-thread","signal"] }
@@ -34,8 +34,11 @@ base64-url = "1.4.8"
 
 # serialization
 serde = { version = "1.0", features = ["derive","rc"] }
-serde_derive = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8"
 
-nats = "0.11.0"
+# mesagisto
+nats = "0.15.2"
+mesagisto-client = { git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git" }
+automatic-config = { git = "https://github.com/Itsusinn/automatic-config-rs.git" }
+singleton = { git = "https://github.com/Itsusinn/singleton-rs.git", rev = "bee321c" }
