--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 #bot
-serenity = "0.10.9"
+serenity = { branch = "next",git = "https://github.com/serenity-rs/serenity.git"}
 
 # logging
 env_logger = "0.9.0"
@@ -15,16 +15,19 @@ pretty_env_logger = "0.4.0"
 log = "0.4.14"
 
 # asynchronous
-tokio = { version = "1.3", features = ["macros", "rt-multi-thread","signal"] }
-reqwest = { version = "0.11",default-features = false,features = ["rustls","socks"] }
+tokio = { version = "1.15.0",default-features = false,features = ["macros", "rt-multi-thread","signal"] }
+reqwest = { version = "0.11.9",default-features = false,features = ["rustls","socks"] }
 smol = "1.2.5"
+sled = "0.34.7"
 
 # tools
 url = "2.2.2"
 once_cell = "1.8.0"
-dashmap = { version = "4.0" , features = ["serde"] }
+dashmap = { version = "5.0.0" , features = ["serde"] }
 educe = "0.4.18"
 arcstr = "1.1.1"
+either = "1.6.1"
+new_mime_guess = "4.0.0"
 
 # error handling
 thiserror = "1.0"
@@ -34,12 +37,14 @@ anyhow = "1.0"
 base64-url = "1.4.8"
 
 # serialization
-serde = { version = "1.0", features = ["derive","rc"] }
-serde_json = "1.0"
-serde_yaml = "0.8"
+serde = { version = "1.0.133", features = ["derive","rc"] }
+serde_json = "1.0.74"
+serde_yaml = "0.8.23"
+serde_cbor = "0.11.2"
 
 # mesagisto
-nats = "0.15.2"
-mesagisto-client = { git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git" }
+nats = "0.16.0"
+mesagisto-client = { rev = "02df84", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git" }
+# mesagisto-client = { path = "../../mesagisto-client/rust" }
 automatic-config = { git = "https://github.com/Itsusinn/automatic-config-rs.git" }
 singleton = { git = "https://github.com/Itsusinn/singleton-rs.git", rev = "bee321c" }
