style: code clean
cargo fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ serde_cbor = "0.11.2"
 
 # mesagisto
 nats = "0.16.0"
-mesagisto-client = { rev = "02df84", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git" }
+mesagisto-client = { rev = "02df84a", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git" }
 # mesagisto-client = { path = "../../mesagisto-client/rust" }
 automatic-config = { git = "https://github.com/Itsusinn/automatic-config-rs.git" }
 singleton = { git = "https://github.com/Itsusinn/singleton-rs.git", rev = "bee321c" }
