--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ dashmap = { version = "5.0.0" , features = ["serde"] }
 educe = "0.4.18"
 arcstr = "1.1.1"
 either = "1.6.1"
-new_mime_guess = "4.0.0"
+infer = "0.6.0"
 
 # error handling
 thiserror = "1.0"
