--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
 jobs:
-  build:
+  linux-build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -33,9 +33,6 @@ jobs:
         profile: minimal
         toolchain: nightly
         override: true
-    - name: Install opus
-      run: |
-        sudo apt-get install -y libopus-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
