--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,11 @@ url = "2.2.2"
 once_cell = "1.8.0"
 dashmap = { version = "5.0.0" , features = ["serde"] }
 educe = "0.4.18"
-arcstr = "1.1.1"
+arcstr = { version = "1.1.3", features = ["serde"] }
 either = "1.6.1"
 infer = "0.6.0"
+yaml-rust = "0.4.5"
+linked-hash-map = "0.5.4"
 
 # error handling
 thiserror = "1.0"
@@ -43,11 +45,14 @@ serde_yaml = "0.8.23"
 serde_cbor = "0.11.2"
 
 # mesagisto
-nats = "0.16.0"
-mesagisto-client = { rev = "68f050", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
+nats = "0.17.0"
+mesagisto-client = { rev = "49e7c5", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
 # mesagisto-client = { path = "../../mesagisto-client/rust" }
-automatic-config = { git = "https://github.com/Itsusinn/automatic-config-rs.git" }
+automatic-config = { rev = "ac1cd3ac1a225e8b7f1c80d55fe7e5ee34fad81d", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
+#automatic-config = { path = "/code/automatic-config-rs" }
 singleton = { git = "https://github.com/Itsusinn/singleton-rs.git", rev = "bee321c" }
+# singleton = { path = "/code/singleton-rs" }
+
 [profile.release]
 lto = true
 codegen-units = 1
