--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ sled = "0.34.7"
 url = "2.2.2"
 once_cell = "1.8.0"
 dashmap = { version = "5.0.0" , features = ["serde"] }
-educe = "0.4.18"
+educe = {version = "0.4.18", default-features = false,features = ["Default"]}
 arcstr = { version = "1.1.3", features = ["serde"] }
 either = "1.6.1"
 infer = "0.6.0"
@@ -32,11 +32,11 @@ yaml-rust = "0.4.5"
 linked-hash-map = "0.5.4"
 
 # error handling
-thiserror = "1.0"
-anyhow = "1.0"
+thiserror = "1.0.30"
+anyhow = "1.0.53"
 
 # encoding and decoding
-base64-url = "1.4.8"
+base64-url = "1.4.10"
 
 # serialization
 serde = { version = "1.0.133", features = ["derive","rc"] }
