--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 #bot
-serenity = { rev = "82c2415",git = "https://github.com/serenity-rs/serenity.git" }
+serenity = { version = "0.11.1", features = ["gateway"] }
 
 # logging
 tracing="0.1.30"
