--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,19 +15,19 @@ tracing-subscriber = { version = "0.3.8", features = ["env-filter","tracing-log"
 log="0.4.14"
 
 # asynchronous
-tokio = { version = "1.15.0",default-features = false,features = ["macros", "rt-multi-thread","signal"] }
-reqwest = { version = "0.11.9",default-features = false,features = ["rustls","socks"] }
+tokio = { version = "1.17.0",default-features = false,features = ["macros", "rt-multi-thread","signal"] }
+reqwest = { version = "0.11.10",default-features = false,features = ["rustls","rustls-tls-webpki-roots","rustls-tls-native-roots"] }
 smol = "1.2.5"
 sled = "0.34.7"
 
 # tools
 url = "2.2.2"
-once_cell = "1.8.0"
+once_cell = "1.10.0"
 dashmap = { version = "5.0.0" , features = ["serde"] }
 educe = {version = "0.4.18", default-features = false,features = ["Default"]}
 arcstr = { version = "1.1.3", features = ["serde"] }
 either = "1.6.1"
-infer = "0.6.0"
+infer = "0.7.0"
 yaml-rust = "0.4.5"
 linked-hash-map = "0.5.4"
 
