--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "discord-message-source"
-version = "1.2.0"
+version = "1.3.0-rc"
 
 authors = ["Itsusinn <itsusinn@foxmail.com>"]
 edition = "2021"
