--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,20 @@ version = "1.3.0"
 authors = ["Itsusinn <itsusinn@foxmail.com>"]
 edition = "2021"
 
+[features]
+default = ["color"]
+no-color = ["colored/no-color"]
+color = ["tracing-subscriber/ansi"]
+
 [dependencies]
 #bot
 serenity = { version = "0.11.1", features = ["gateway"] }
 
 # logging
 tracing="0.1.30"
-tracing-subscriber = { version = "0.3.8", features = ["env-filter","tracing-log"]}
+tracing-subscriber = { version = "0.3.11", default-features = false,features = ["env-filter", "tracing-log", "std", "fmt", "local-time"]}
 log="0.4.14"
+colored = "2.0.0"
 
 # asynchronous
 tokio = { version = "1.17.0",default-features = false,features = ["macros", "rt-multi-thread","signal"] }
