--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -2,8 +2,11 @@ name: beta
 
 on:
   push:
-    branches:
-      - "master"
+    branches: [ master ]
+    paths-ignore: [ '*.md' ]
+  pull_request:
+    branches: [ master ]
+    paths-ignore: [ '*.md' ]
 
 env:
   SHORT_NAME: dc
