--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,47 +12,48 @@ color = ["tracing-subscriber/ansi"]
 
 [dependencies]
 #bot
-serenity = { version = "0.11.1", features = ["gateway"] }
+serenity = { version = "0.11.2", features = ["gateway"] }
 
 # logging
-tracing="0.1.30"
-tracing-subscriber = { version = "0.3.11", default-features = false,features = ["env-filter", "tracing-log", "std", "fmt", "local-time"]}
-log="0.4.14"
+tracing= "0.1.34"
+tracing-subscriber = { version = "0.3.11", default-features = false, features = ["env-filter", "tracing-log", "std", "fmt", "local-time"] }
+log= "0.4.17"
 colored = "2.0.0"
 
 # asynchronous
-tokio = { version = "1.17.0",default-features = false,features = ["macros", "rt-multi-thread","signal"] }
-reqwest = { version = "0.11.10",default-features = false,features = ["rustls","rustls-tls-native-roots"] }
+tokio = { version = "1.18.2", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
+reqwest = { version = "0.11.10", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
 smol = "1.2.5"
 sled = "0.34.7"
 
 # tools
 url = "2.2.2"
-once_cell = "1.10.0"
-dashmap = { version = "5.0.0" , features = ["serde"] }
-educe = {version = "0.4.18", default-features = false,features = ["Default"]}
+once_cell = "1.12.0"
+dashmap = { version = "5.3.4", features = ["serde"] }
+educe = { version = "0.4.19", default-features = false, features = ["Default"] }
 arcstr = { version = "1.1.3", features = ["serde"] }
 either = "1.6.1"
-infer = "0.7.0"
+infer = "0.8.0"
 yaml-rust = "0.4.5"
 linked-hash-map = "0.5.4"
+time = { version = "0.3.9", features = ["macros", "local-offset"] }
 
 # error handling
-thiserror = "1.0.30"
-anyhow = "1.0.53"
+thiserror = "1.0.31"
+anyhow = "1.0.57"
 
 # encoding and decoding
-base64-url = "1.4.10"
+base64-url = "1.4.13"
 
 # serialization
-serde = { version = "1.0.136", features = ["derive","rc"] }
-serde_json = "1.0.79"
-serde_yaml = "0.8.23"
+serde = { version = "1.0.137", features = ["derive","rc"] }
+serde_json = "1.0.81"
+serde_yaml = "0.8.24"
 serde_cbor = "0.11.2"
 
 # mesagisto
-nats = "0.19.0"
-mesagisto-client = { rev = "33bc09c", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
+nats = "0.20.1"
+mesagisto-client = { rev = "b4ec52", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
 # mesagisto-client = { path = "../../mesagisto-client/rust" }
 automatic-config = { rev = "ac1cd3ac1a225e8b7f1c80d55fe7e5ee34fad81d", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
 #automatic-config = { path = "/code/automatic-config-rs" }
