--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,13 @@ color = ["tracing-subscriber/ansi"]
 serenity = { version = "0.11.2", features = ["gateway"] }
 
 # logging
-tracing= "0.1.34"
+tracing= "0.1.35"
 tracing-subscriber = { version = "0.3.11", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
-log= "0.4.17"
 colored = "2.0.0"
 
 # asynchronous
-tokio = { version = "1.18.2", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
-reqwest = { version = "0.11.10", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
+tokio = { version = "1.19.2", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
+reqwest = { version = "0.11.11", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
 smol = "1.2.5"
 sled = "0.34.7"
 
@@ -31,16 +30,16 @@ url = "2.2.2"
 once_cell = "1.12.0"
 dashmap = { version = "5.3.4", features = ["serde"] }
 educe = { version = "0.4.19", default-features = false, features = ["Default"] }
-arcstr = { version = "1.1.3", features = ["serde"] }
+arcstr = { version = "1.1.4", features = ["serde"] }
 either = "1.6.1"
-infer = "0.8.0"
+infer = "0.8.1"
 yaml-rust = "0.4.5"
-linked-hash-map = "0.5.4"
-time = { version = "0.3.9", features = ["macros", "local-offset"] }
+linked-hash-map = "0.5.6"
+time = { version = "0.3.11", features = ["macros", "local-offset"] }
 
 # error handling
 thiserror = "1.0.31"
-anyhow = "1.0.57"
+anyhow = "1.0.58"
 
 # encoding and decoding
 base64-url = "1.4.13"
@@ -52,14 +51,19 @@ serde_yaml = "0.8.24"
 serde_cbor = "0.11.2"
 
 # mesagisto
-nats = "0.20.1"
-mesagisto-client = { rev = "b4ec52", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
+nats = "0.21.0"
+mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
 # mesagisto-client = { path = "../../mesagisto-client/rust" }
-automatic-config = { rev = "ac1cd3ac1a225e8b7f1c80d55fe7e5ee34fad81d", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
+automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
 #automatic-config = { path = "/code/automatic-config-rs" }
-singleton = { git = "https://github.com/Itsusinn/singleton-rs.git", rev = "bee321c" }
+singleton = { branch = "master",git = "https://github.com/Itsusinn/singleton-rs.git" }
 # singleton = { path = "/code/singleton-rs" }
+lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
 
 [profile.release]
+opt-level = 'z'
+debug = false
 lto = true
+incremental = false
 codegen-units = 1
+strip = true
