--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,7 @@ lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.g
 
 [profile.release]
 opt-level = 'z'
-debug = false
+debug = 1
 lto = true
 incremental = false
 codegen-units = 1
