--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 default = ["color"]
 no-color = ["colored/no-color"]
 color = ["tracing-subscriber/ansi"]
+tokio-console = ["console-subscriber","tokio/tracing"]
 
 [dependencies]
 #bot
@@ -18,16 +19,17 @@ serenity = { version = "0.11.2", features = ["gateway"] }
 tracing= "0.1.35"
 tracing-subscriber = { version = "0.3.14", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
 colored = "2.0.0"
+console-subscriber = { version = "0.1.6", optional = true }
 
 # asynchronous
-tokio = { version = "1.19.2", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
+tokio = { version = "1.20.0", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
 reqwest = { version = "0.11.11", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
 smol = "1.2.5"
 sled = "0.34.7"
 
 # tools
 url = "2.2.2"
-once_cell = "1.12.0"
+once_cell = "1.13.0"
 dashmap = { version = "5.3.4", features = ["serde"] }
 educe = { version = "0.4.19", default-features = false, features = ["Default"] }
 arcstr = { version = "1.1.4", features = ["serde"] }
@@ -36,22 +38,23 @@ infer = "0.9.0"
 yaml-rust = "0.4.5"
 linked-hash-map = "0.5.6"
 time = { version = "0.3.11", features = ["macros", "local-offset"] }
+chrono = "0.4.19"
 
 # error handling
 thiserror = "1.0.31"
-anyhow = "1.0.58"
+color-eyre = "0.6.2"
 
 # encoding and decoding
 base64-url = "1.4.13"
 
 # serialization
-serde = { version = "1.0.138", features = ["derive","rc"] }
+serde = { version = "1.0.139", features = ["derive","rc"] }
 serde_json = "1.0.82"
-serde_yaml = "0.8.24"
+serde_yaml = "0.8.25"
 serde_cbor = "0.11.2"
 
 # mesagisto
-nats = { package = "async-nats", version = "0.15.0" }
+nats = { package = "async-nats", version = "0.17.0" }
 mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
 # mesagisto-client = { path = "../../mesagisto-client/rust" }
 automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
@@ -66,4 +69,4 @@ debug = 1
 lto = true
 incremental = false
 codegen-units = 1
-strip = true
+strip = "debuginfo"
