ci: improve workflow

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,9 +1,9 @@
-name: release
+name: pre-release
 
 on:
   push:
-    tags:
-      - "v*"
+    branches: [ master ]
+    paths-ignore: [ '*.md' ]
 
 env:
   SHORT_NAME: dc
@@ -131,7 +131,9 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
+          automatic_release_tag: latest
+          prerelease: true
+          title: "Development Build/不稳定发行版"
           files: |
             packages/*
             LICENSE
