--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
+
     - name: Resume cache
       uses: actions/cache@v2
       with:
@@ -26,6 +27,7 @@ jobs:
         key: ${{ runner.os }}-build-${{ hashFiles('**/Cargo.toml') }}
         restore-keys: |
           ${{ runner.os }}-build
+
     - name: Install stable Rust toolchain
       uses: actions-rs/toolchain@v1
       with:
@@ -33,11 +35,18 @@ jobs:
         toolchain: nightly
         components: clippy
         override: true
+
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+
     - uses: actions-rs/clippy-check@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         args: --all-features
+
+    - name: Run cargo bloat
+      uses: orf/cargo-bloat-action@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
