--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -19,49 +19,49 @@ jobs:
           # Linux
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
-            release_name: x86_64-linux-musl
+            release_name: x86_64-linux
             postfix: ""
             extra_args: ""
             cross: true
 
           - os: ubuntu-latest
             target: i686-unknown-linux-musl
-            release_name: i686-linux-musl
+            release_name: i686-linux
             postfix: ""
             extra_args: ""
             cross: true
 
           - os: ubuntu-latest
             target: aarch64-unknown-linux-musl
-            release_name: aarch64-linux-musl
+            release_name: aarch64-linux
             postfix: ""
             extra_args: ""
             cross: true
           # Windows GNU
           - os: ubuntu-latest
             target: x86_64-pc-windows-gnu
-            release_name: x86_64-windows-gnu.exe
+            release_name: x86_64-windows.exe
             postfix: ".exe"
             extra_args: --no-default-features --features no-color
             cross: true
 
           - os: ubuntu-latest
             target: i686-pc-windows-gnu
-            release_name: i686-windows-gnu.exe
+            release_name: i686-windows.exe
             postfix: ".exe"
             extra_args: --no-default-features --features no-color
             cross: true
 
           - os: ubuntu-latest
             target: x86_64-pc-windows-gnu
-            release_name: x86_64-windows-gnu-colored.exe
+            release_name: x86_64-windows-colored.exe
             postfix: ".exe"
             extra_args: ""
             cross: true
 
           - os: ubuntu-latest
             target: i686-pc-windows-gnu
-            release_name: i686-windows-gnu-colored.exe
+            release_name: i686-windows-colored.exe
             postfix: ".exe"
             extra_args: ""
             cross: true
@@ -88,11 +88,10 @@ jobs:
           restore-keys: |
             ${{ matrix.target }}-release
 
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: nightly
+          toolchain: nightly-2022-07-01
           target: ${{ matrix.target }}
-          override: true
 
       - uses: actions-rs/cargo@v1
         with:
