--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "discord-message-source"
+name = "msgist-dc"
 version = "1.3.5"
 
 authors = ["Itsusinn <itsusinn@foxmail.com>"]
@@ -9,20 +9,18 @@ edition = "2021"
 default = ["color"]
 no-color = ["colored/no-color"]
 color = ["tracing-subscriber/ansi"]
-tokio-console = ["console-subscriber","tokio/tracing"]
 
 [dependencies]
 #bot
-serenity = { version = "0.11.2", features = ["gateway"] }
+serenity = { version = "0.11.5", features = ["gateway"] }
 
 # logging
-tracing= "0.1.35"
-tracing-subscriber = { version = "0.3.14", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
+tracing= "0.1.36"
+tracing-subscriber = { version = "0.3.15", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
 colored = "2.0.0"
-console-subscriber = { version = "0.1.6", optional = true }
 
 # asynchronous
-tokio = { version = "1.20.0", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
+tokio = { version = "1.20.1", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
 reqwest = { version = "0.11.11", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
 smol = "1.2.5"
 sled = "0.34.7"
@@ -37,20 +35,20 @@ either = "1.7.0"
 infer = "0.9.0"
 yaml-rust = "0.4.5"
 linked-hash-map = "0.5.6"
-time = { version = "0.3.11", features = ["macros", "local-offset"] }
-chrono = "0.4.19"
+time = { version = "0.3.12", features = ["macros", "local-offset"] }
+chrono = "0.4.20"
 
 # error handling
-thiserror = "1.0.31"
+thiserror = "1.0.32"
 color-eyre = "0.6.2"
 
 # encoding and decoding
 base64-url = "1.4.13"
 
 # serialization
-serde = { version = "1.0.139", features = ["derive","rc"] }
-serde_json = "1.0.82"
-serde_yaml = "0.8.25"
+serde = { version = "1.0.142", features = ["derive","rc"] }
+serde_json = "1.0.83"
+serde_yaml = "0.9.4"
 serde_cbor = "0.11.2"
 
 # mesagisto
