--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,13 +26,11 @@ jobs:
         key: ${{ runner.os }}-build-${{ hashFiles('**/Cargo.toml') }}
         restore-keys: |
           ${{ runner.os }}-build
-    - name: Install nightly Rust toolchain
-      uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@master
       with:
-        profile: minimal
-        toolchain: nightly
+        toolchain: nightly-2022-07-01
+        target: ${{ matrix.target }}
         components: clippy
-        override: true
     - name: Build
       run: cargo build --verbose
     - name: Run tests
