--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ version = "1.3.5"
 authors = ["Itsusinn <itsusinn@foxmail.com>"]
 edition = "2021"
 
+[package.metadata.i18n]
+available-locales = ["en-US", "zh-CN"]
+default-locale = "en-US"
+load-path = "locales"
+
 [features]
 default = ["color"]
 no-color = ["colored/no-color"]
@@ -18,6 +23,8 @@ serenity = { version = "0.11.5", features = ["gateway"] }
 tracing= "0.1.36"
 tracing-subscriber = { version = "0.3.15", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
 colored = "2.0.0"
+sys-locale = "0.2.1"
+rust-i18n = { branch = "main", git = "https://github.com/Itsusinn/rust-i18n.git"}
 
 # asynchronous
 tokio = { version = "1.20.1", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
