--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,51 +14,48 @@ load-path = "locales"
 default = ["color"]
 no-color = ["colored/no-color"]
 color = ["tracing-subscriber/ansi"]
-beta = []
+
 
 [dependencies]
 #bot
 serenity = { version = "0.11.5", features = ["gateway"] }
 
 # logging
-tracing= "0.1.36"
-tracing-subscriber = { version = "0.3.15", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
+tracing= "0.1.37"
+tracing-subscriber = { version = "0.3.16", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
 colored = "2.0.0"
-sys-locale = "0.2.1"
-rust-i18n = { branch = "main", git = "https://github.com/Itsusinn/rust-i18n.git"}
 
 # asynchronous
-futures = "0.3.24"
-tokio-util = "0.7.4"
-tokio = { version = "1.21.1", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
-reqwest = { version = "0.11.11", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
+futures-util = "0.3.25"
+tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
+reqwest = { version = "0.11.12", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
 sled = "0.34.7"
 
 # tools
-uuid = "1.1.2"
+uuid = "1.2.1"
 url = "2.3.1"
-once_cell = "1.14.0"
+once_cell = "1.16.0"
 dashmap = { version = "5.4.0", features = ["serde"] }
-educe = { version = "0.4.19", default-features = false, features = ["Default"] }
+educe = { version = "0.4.20", default-features = false, features = ["Default"] }
 arcstr = { version = "1.1.4", features = ["serde"] }
 either = "1.8.0"
-infer = "0.9.0"
+infer = "0.11.0"
 yaml-rust = "0.4.5"
 linked-hash-map = "0.5.6"
-time = { version = "0.3.14", features = ["macros", "local-offset"] }
+time = { version = "0.3.16", features = ["macros", "local-offset"] }
 chrono = "0.4.22"
 
 # error handling
-thiserror = "1.0.35"
+thiserror = "1.0.37"
 color-eyre = "0.6.2"
 
 # encoding and decoding
 base64-url = "1.4.13"
 
 # serialization
-serde = { version = "1.0.144", features = ["derive","rc"] }
-serde_json = "1.0.85"
-serde_yaml = "0.9.13"
+serde = { version = "1.0.147", features = ["derive","rc"] }
+serde_json = "1.0.87"
+serde_yaml = "0.9.14"
 ciborium = "0.2.0"
 
 # mesagisto
