--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           ${{ runner.os }}-build
     - uses: dtolnay/rust-toolchain@master
       with:
-        toolchain: nightly
+        toolchain: nightly-2024-01-01
         target: ${{ matrix.target }}
         components: clippy
     - name: Build
